--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,21 +10,21 @@
 <div class="row">
     <div class="col-lg-4">
         <h3 class="midrow">
-            View Recipes as Gess User
+            View Recipes as Guess User
         </h3>
         <h2 class="left">Browse and view recipes as a guess and Sign up later</h2>
         <p><%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %></p>
     </div>
     <div class="col-lg-4">
         <h3 class="midrow">
-            View Recipes as Gess User
+            View Recipes as Guess User
         </h3>
         <h2 class="left">Browse and view recipes as a guess and Sign up later</h2>
         <p><%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %></p>
     </div>
     <div class="col-lg-4">
         <h3 class="midrow">
-            View Recipes as Gess User
+            View Recipes as Guess User
         </h3>
         <h2 class="left">Browse and view recipes as a guess and Sign up later</h2>
         <p><%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %></p>
