--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -92,6 +92,10 @@ input, textarea, select, .unedtable-input {
     margin-bottom: 15px;
 }
 
+.input_checkbox input {
+    width: auto !important;
+}
+
 input {
     height: auto !important;
 }
