--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,9 +1,17 @@
-<header class="navbar navbar-fixed-top navbar-default">
-  <div class="container">
-    <%= link_to "myRecipes", root_path, class: "btn btn-lg btn-success", id: "logo" %>
-    <ul class="nav_ul_item">
-      <li class="dropdown">
-          <%= link_to "#", class: "btn btn-default btn-danger dropdown-toggle", "data-toggle" => "dropdown" do %>
+<header class="navbar navbar-bg">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    <%= link_to "myRecipes", root_path, class: "navbar-brand", id: "logo" %>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <%= link_to "#", class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
             Styles <b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
@@ -20,10 +28,8 @@
               <% end %>
             </ul>
         </li>
-    </ul>
-    <ul class="nav_ul_item">
-      <li class="dropdown">
-          <%= link_to "#", class: "btn btn-default btn-danger dropdown-toggle", "data-toggle" => "dropdown" do %>
+        <li class="dropdown">
+          <%= link_to "#", class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
             Ingredients <b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
@@ -40,28 +46,30 @@
               <% end %>
             </ul>
         </li>
-    </ul>
-    <% if logged_in? %>
-      <div class="nav_item">
-        <%= link_to "New Recipe", new_recipe_path, class: "btn btn-default btn-warning" %>
-      </div>
-      <ul class="nav_item">
-        <li class="dropdown">
-          <%= link_to "#", class: "btn btn-default btn-danger dropdown-toggle", "data-toggle" => "dropdown" do %>
-            <%= current_user.chefname %> <b class="caret"></b>
-            <% end %>
-            <ul class="dropdown-menu">
-              <li><%= link_to "View Profile", chef_path(current_user) %></li>
-              <li><%= link_to "Edit Profile", edit_chef_path(current_user) %></li>
-              <li class="divider"></li>
-              <li><%= link_to "Logout", logout_path %></li>
-            </ul>
-        </li>
-      </ul>
-    <% else %>
-      <div class="nav_item">
-        <%= link_to "Log in", login_path, class: "btn btn-default btn-success" %>
-      </div>
-    <% end %>
+      </ul>  
+      <% if logged_in? %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "New Recipe", new_recipe_path %></li>
+          <li class="dropdown">
+            <%= link_to "#", class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
+              <%= current_user.chefname %> <b class="caret"></b>
+              <% end %>
+              <ul class="dropdown-menu">
+                <li><%= link_to "View Profile", chef_path(current_user) %></li>
+                <li><%= link_to "Edit Profile", edit_chef_path(current_user) %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Logout", logout_path %></li>
+              </ul>
+          </li>
+        </ul>
+      <% else %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Sign up", register_path %>
+          </li>
+          <li><%= link_to "Log in", login_path %>
+          </li>
+        </ul>
+      <% end %> 
+    </div>
   </div>
 </header>
